Set justify-content to space between to ensure close button is aligned with the header

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -79,4 +79,5 @@ button.cancel {
 
 .top  {
   display: flex;
+  justify-content: space-between;
 }
